Remove fixed size of decision overlay text and add nowrap. Add following characters to decision regex -> _-

--- a/app/executer/execute.css
+++ b/app/executer/execute.css
@@ -44,7 +44,7 @@ a:link {
 
 .decision-overlay .tooltiptext {
     visibility: hidden;
-    width: 160px;
+    white-space: nowrap;
     color: #fff;
     text-align: center;
     border-radius: 6px;
